Prevent slides height cropping

--- a/frontend/src/Slides.sass
+++ b/frontend/src/Slides.sass
@@ -4,6 +4,8 @@
 body
     .slide
         background-color: $primaryColor
+        max-width: 100vh
+        margin: 0 auto
 
         /* slide content wrapper */
         > div
